# pytaskweb

./: .envrc  .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml  pytaskweb.py  requirements.txt  taskwarrior.py  wsgi.py
static/: adminlte  favicon.ico.old
static/css/: base.css
static/datetimepicker/: package-lock.json
static/jQuery-Date-Time-Picke-Plugin-Simple-Datetimepicker/: package.json
templates/: base.html  base2.html  complete.html  index.html  projects.html  task_add.html  task_detail.html  tasks.html
